...
            Row(
            children: [
              Expanded(
              child: TextFormField(
              controller: _productNameController,
              decoration: InputDecoration(
              labelText: 'Product Name',
              hintText: 'Enter product name',
              border: OutlineInputBorder(
                borderRadius: BorderRadius.circular(8.0),
              ),
              ),
              validator: (value) {
...
                    }
                    },
                    child: AbsorbPointer(
                    child: TextFormField(
                      controller: _expiryDateController,
                      decoration: InputDecoration(
                      labelText: 'Expiry Date',
                      hintText: 'Select expiry date',
                      border: OutlineInputBorder(
                        borderRadius: BorderRadius.circular(8.0),
                      ),
                      suffixIcon: Icon(Icons.calendar_today), // Add calendar icon here
                      ),
...
                textStyle: const TextStyle(fontSize: 18),
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(12.0),
                ),
              ),
              child: const Text(
                'Save Food Item',
                style: TextStyle(
                  fontSize: 18,
                  fontWeight: FontWeight.bold,
                  color: Colors.white,
                ),
              ),
...
