...
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(20.0),
        ),
        padding: EdgeInsets.symmetric(horizontal: 16, vertical: 10),
      ),
      icon: Icon(Icons.check_circle, color: Colors.white),
      label: Text("Mark as Picked Up", style: TextStyle(color: Colors.white)),
      onPressed: () async {
        // Store the context before the async gap
        final currentContext = context;
        
        List<Map<String, dynamic>> requests =
            await donationService.getDonationRequests(donationId).first;
...
