...
                      },
                    ),

                    _buildMenuTile(
                      context: context,
                      icon: Icons.food_bank,
                      title: 'Manage Donations',
                      onTap: () {
                        Navigator.pushNamed(context, '/myDonations');
                      },
                    ),

                    Divider(indent: 16.0, endIndent: 16.0, color: theme.dividerColor),
...
